# z-api

./: .gitignore  Pipfile  pyproject.toml  pytest.ini  requirements.txt
resources/: application_config.yaml
tests/core/config/: test_settings.py
tests/core/exceptions/: test_exceptions.py
tests/core/logging/: test_log_configurator.py
tests/core/logging/context/: test_log_context_registry.py
z_api/: __init__.py
z_api/core/: api.py
z_api/core/config/: settings.py
z_api/core/exceptions/: impossible_instantiation_error.py  invalid_config_file_error.py
z_api/core/logging/: config.py
z_api/core/logging/contexts/: response_time_context.py
z_api/core/logging/filters/: response_time_filter.py  trace_id_filter.py
z_api/core/logging/middlewares/: response_time_middleware.py  trace_id_middleware.py
z_api/core/plugin/: plugin.py
z_api/utils/: deep_merge_dicts.py
zee_api/: __init__.py
zee_api/core/: api.py  zee_api.py
zee_api/core/config/: settings.py  spring_yaml_settings_source.py
zee_api/core/extension_manager/: base_extension.py  extension_manager.py
zee_api/core/logging/: config.py  log_configurator.py
zee_api/creators/: create_app_with_defaults.py
zee_api/extensions/: extension.py
zee_api/extensions/healthchecker/: healthchecker.py  healthstate.py  service_config.py  service_state.py  settings.py
zee_api/extensions/http/: __init__.py  httpx_client.py  settings.py
zee_api/extensions/logging/: log_configurator.py  settings.py
zee_api/extensions/tasks/: settings.py  task.py  task_registry.py
zee_api/utils/: format_bytes.py
(+21 files in other folders)
